--- a/main.css
+++ b/main.css
@@ -1,7 +1,17 @@
 .wrapper {
-
+  width: 1100px;
+  margin: 0 auto;
 }
 
-svg {
+.wrapper h3 {
+  text-align: center;
+  margin-bottom: 30px;
+}
 
+.bar {
+  fill: #558de8;
+}
+
+.bar:hover {
+  fill: #85b0f7;
 }
